--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
-                      SERVICES
+                      ST.GEORGE <br>
+                      YOUTH ASSOCIATION <br>
+                      CHELAKKARA
                     </h1>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -175,9 +175,9 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
-                      SERVICES
+                      ST.GEORGE <br>
+                      YOUTH ASSOCIATION <br>
+                      CHELAKKARA
                     </h1>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -198,9 +198,9 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
-                      SERVICES
+                      ST.GEORGE <br>
+                      YOUTH ASSOCIATION <br>
+                      CHELAKKARA
                     </h1>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -221,9 +221,9 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
-                      SERVICES
+                      ST.GEORGE <br>
+                      YOUTH ASSOCIATION <br>
+                      CHELAKKARA
                     </h1>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -244,9 +244,9 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ARCHITECT <br>
-                      BUILDER CONSTRUCTION <br>
-                      SERVICES
+                      ST.GEORGE <br>
+                      YOUTH ASSOCIATION <br>
+                      CHELAKKARA
                     </h1>
                     <div class="btn-box">
                       <a href="" class="btn1">
