change name in intex.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
               <img src="images/flag-uk.png" alt="flag" class=" " title="United Kingdom"> <i class="fa fa-angle-down " aria-hidden="true"></i>
             </a>
-            <div class="dropdown-menu ">
+            <!-- <div class="dropdown-menu ">
               <a href="#" class="dropdown-item">
                 <img src="images/flag-france.png" class="" alt="flag">
               </a>
@@ -53,7 +53,7 @@
             <span>
               English
             </span>
-          </div>
+          </div> -->
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
