--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="project.html">Project</a>
+                  <a class="nav-link" href="activities.html">Activities</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimonial</a>
-                </li> -->
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
@@ -684,8 +684,8 @@
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="service.html">Services</a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="project.html">Project</a>
-                <!-- <a class="" href="testimonial.html">Testimonial</a> -->
+                <a class="" href="activities.html">Project</a>
+                <a class="" href="testimonial.html">Testimonial</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
             </div>
@@ -791,7 +791,7 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+  <script src="https://goo.gl/maps/LU7zm7fEq9LDDkj19">
   </script>
   <!-- End Google Map -->
 
