--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="project.html">Project</a>
+                  <a class="nav-link" href="activities.html">Activities</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimonial</a>
@@ -214,7 +214,7 @@
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="service.html">Services</a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="project.html">Project</a>
+                <a class="" href="activities.html">Activities</a>
                 <a class="" href="testimonial.html">Testimonial</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
