--- a/activities.html
+++ b/activities.html
@@ -114,7 +114,7 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="project.html">Project</a>
+                  <a class="nav-link" href="activities.html">activities</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimonial</a>
@@ -145,13 +145,13 @@
   </div>
 
 
-  <!-- project section -->
+  <!-- activities section -->
 
-  <section class="project_section layout_padding">
+  <section class="activities_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Projects
+          activitiess
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -161,16 +161,15 @@
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".painting">Painting</a>
-            <a href="#" class="item" data-owl-filter=".reconstruction">Reconstruction </a>
-            <a href="#" class="item" data-owl-filter=".repair">Repairs </a>
-            <a href="#" class="item" data-owl-filter=".residential">Residential </a>
-            <a href="#" class="item" data-owl-filter=".styling">Styling </a>
+            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
+            <a href="#" class="item" data-owl-filter=".gathering">Gathering</a>
+            <a href="#" class="item" data-owl-filter=".social">Social</a>
+            <a href="#" class="item" data-owl-filter=".church">church</a>
           </nav>
         </div>
 
-        <div class="owl-carousel project_carousel">
-          <div class="item painting">
+        <div class="owl-carousel activities_carousel">
+          <div class="item charity">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -180,16 +179,15 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Interior work
+                  Study meterial donation
                 </h5>
                 <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
+                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും ദരിദ്രരായ വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധമാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്ജിവൈഎ ഉറപ്പാക്കുന്നു. ഞങ്ങളുടെ വാർഷിക സംഭാവന പരിപാടിയിലൂടെ, അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു
                 </p>
               </div>
             </div>
           </div>
-          <div class="item reconstruction">
+          <div class="item gathering">
             <div class="box">
               <div class="img-box">
                 <img src="images/project2.jpg" alt="" />
@@ -208,7 +206,7 @@
               </div>
             </div>
           </div>
-          <div class="item repair">
+          <div class="item social">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -227,26 +225,7 @@
               </div>
             </div>
           </div>
-          <div class="item residential">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/project1.jpg" alt="" />
-                <a href="" class="pin_link">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Interior work
-                </h5>
-                <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item styling">
+          <div class="item church">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -270,7 +249,7 @@
     </div>
   </section>
 
-  <!-- end project section -->
+  <!-- end activities section -->
 
   <!-- info section -->
   <section class="info_section ">
@@ -308,7 +287,7 @@
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="service.html">Services</a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="project.html">Project</a>
+                <a class="" href="activities.html">activities</a>
                 <a class="" href="testimonial.html">Testimonial</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
