--- a/activities.html
+++ b/activities.html
@@ -161,10 +161,10 @@
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
-            <a href="#" class="item" data-owl-filter=".gathering">Gathering</a>
-            <a href="#" class="item" data-owl-filter=".social">Social</a>
-            <a href="#" class="item" data-owl-filter=".church">church</a>
+            <a href="#" class="item" data-owl-filter=".painting">Painting</a>
+            <a href="#" class="item" data-owl-filter=".reconstruction">Reconstruction </a>
+            <a href="#" class="item" data-owl-filter=".repair">Repairs </a>
+            <a href="#" class="item" data-owl-filter=".residential">Residential </a>
             <a href="#" class="item" data-owl-filter=".styling">Styling </a>
           </nav>
         </div>
@@ -189,7 +189,7 @@
               </div>
             </div>
           </div>
-          <div class="item gathering">
+          <div class="item reconstruction">
             <div class="box">
               <div class="img-box">
                 <img src="images/project2.jpg" alt="" />
@@ -208,7 +208,7 @@
               </div>
             </div>
           </div>
-          <div class="item social">
+          <div class="item repair">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -227,7 +227,7 @@
               </div>
             </div>
           </div>
-          <div class="item church">
+          <div class="item residential">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
