--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">St George Youth Association 2023/a>
       </p>
     </div>
   </footer>
