--- a/activities.html
+++ b/activities.html
@@ -169,8 +169,8 @@
           </nav>
         </div>
 
-        <div class="owl-carousel activities_carousel">
-          <div class="item charity">
+        <div class="owl-carousel project_carousel">
+          <div class="item painting">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
