--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a> St George Youth Association Chelakkara </a>
       </p>
     </div>
   </footer>
