--- a/activities.html
+++ b/activities.html
@@ -151,7 +151,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          activitiess
+          Activitiess
         </h2>
       </div>
       <div class="carousel-wrap ">
