added changes in activity

--- a/activities.html
+++ b/activities.html
@@ -147,11 +147,11 @@
 
   <!-- activities section -->
 
-  <section class="activities_section layout_padding">
+  <section class="project_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Activitiess
+          Projects
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -166,6 +166,7 @@
             <a href="#" class="item" data-owl-filter=".repair">Repairs </a>
             <a href="#" class="item" data-owl-filter=".residential">Residential </a>
             <a href="#" class="item" data-owl-filter=".styling">Styling </a>
+          </nav>
         </div>
 
         <div class="owl-carousel project_carousel">
@@ -269,7 +270,7 @@
     </div>
   </section>
 
-  <!-- end activities section -->
+  <!-- end activity section -->
 
   <!-- info section -->
   <section class="info_section ">
