added changes in activity

--- a/activities.html
+++ b/activities.html
@@ -151,7 +151,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Projects
+          Activities
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -161,9 +161,9 @@
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".painting">Painting</a>
-            <a href="#" class="item" data-owl-filter=".reconstruction">Reconstruction </a>
-            <a href="#" class="item" data-owl-filter=".repair">Repairs </a>
+            <a href="#" class="item" data-owl-filter=".painting">Charity</a>
+            <a href="#" class="item" data-owl-filter=".reconstruction">Church </a>
+            <a href="#" class="item" data-owl-filter=".repair">Gathering </a>
             <a href="#" class="item" data-owl-filter=".residential">Residential </a>
             <a href="#" class="item" data-owl-filter=".styling">Styling </a>
           </nav>
