--- a/activities.html
+++ b/activities.html
@@ -161,20 +161,19 @@
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".painting">Charity</a>
+            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
             <a href="#" class="item" data-owl-filter=".reconstruction">Church </a>
             <a href="#" class="item" data-owl-filter=".repair">Gathering </a>
-            <a href="#" class="item" data-owl-filter=".residential">Sociall </a>
-            <a href="#" class="item" data-owl-filter=".styling">Styling </a>
+            <a href="#" class="item" data-owl-filter=".residential">Social </a>
           </nav>
         </div>
 
         <div class="owl-carousel project_carousel">
-          <div class="item painting">
+          <div class="item charity">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
-                <a href="" class="pin_link">
+                <a >
                   <i class="fa fa-link" aria-hidden="true"></i>
                 </a>
               </div>
@@ -183,7 +182,7 @@
                   പുസ്തക വിതരണം
                 </h5>
                 <p>
-                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും ദരിദ്രരായ വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധമാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്ജിവൈഎ ഉറപ്പാക്കുന്നു. ഞങ്ങളുടെ വാർഷിക സംഭാവന പരിപാടിയിലൂടെ, അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും ദരിദ്രരായ വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധമാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. ഞങ്ങളുടെ വാർഷിക സംഭാവന പരിപാടിയിലൂടെ, അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
                 </p>
               </div>
             </div>
@@ -227,25 +226,6 @@
             </div>
           </div>
           <div class="item residential">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/project1.jpg" alt="" />
-                <a href="" class="pin_link">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Interior work
-                </h5>
-                <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item styling">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
