added changes in activity

--- a/activities.html
+++ b/activities.html
@@ -162,9 +162,8 @@
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
             <a href="#" class="item" data-owl-filter=".charity">Charity</a>
-            <a href="#" class="item" data-owl-filter=".reconstruction">Church </a>
-            <a href="#" class="item" data-owl-filter=".repair">Gathering </a>
-            <a href="#" class="item" data-owl-filter=".residential">Social </a>
+            <a href="#" class="item" data-owl-filter=".gathering">Gathering </a>
+            <a href="#" class="item" data-owl-filter=".social">Social </a>
           </nav>
         </div>
 
@@ -173,9 +172,9 @@
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
-                <a >
+                <!-- <a >
                   <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
+                </a> -->
               </div>
               <div class="detail-box">
                 <h5>
@@ -187,26 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="item reconstruction">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/project2.jpg" alt="" />
-                <a href="" class="pin_link">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Interior work
-                </h5>
-                <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item repair">
+          <div class="item gathering">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -216,16 +196,15 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Interior work
+                  മിനി പെരുന്നാൾ
                 </h5>
                 <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
+                  under process
                 </p>
               </div>
             </div>
           </div>
-          <div class="item residential">
+          <div class="item social">
             <div class="box">
               <div class="img-box">
                 <img src="images/project1.jpg" alt="" />
@@ -235,11 +214,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Interior work
+                  പരിസ്ഥിതി ദിനം
                 </h5>
                 <p>
-                  alteration in some form, by injected humour, or randomised words which don't look even slightly
-                  believable. If you are going to use
+                  under process
                 </p>
               </div>
             </div>
