--- a/activities.html
+++ b/activities.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fonicy</title>
+  <title>SGYA/Activities</title>
 
 
   <!-- bootstrap core css -->
