--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
           </div>
           <div class="social_box">
-            <a href="">
+            <a href="https://www.facebook.com/ChelakkaraSGYA/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <a href="">
