added changes in activities

--- a/index.html
+++ b/index.html
@@ -57,22 +57,13 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Chelakkara,Thrissur,Kerala
+                <a href="https://goo.gl/maps/8v7WfZ9jH55arCWR7">Chelakkara,Thrissur,Kerala</a>
               </span>
             </a>
           </div>
           <div class="social_box">
             <a href="https://www.facebook.com/ChelakkaraSGYA/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
         </div>
