--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 Email : sgya.chelakkara@gmail.com
               </span>
             </a>
-            <a href="">
+            <a href="https://goo.gl/maps/8v7WfZ9jH55arCWR7">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                <a href="https://goo.gl/maps/8v7WfZ9jH55arCWR7">Chelakkara,Thrissur,Kerala</a>
+                Chelakkara,Thrissur,Kerala
               </span>
             </a>
           </div>
