--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <a href="https://www.facebook.com/ChelakkaraSGYA/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
+            <a href="">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -681,7 +684,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 mx-auto">
+          <!-- <div class="col-sm-6 col-md-4 col-lg-3 mx-auto">
             <div class="info_post">
               <h5>
                 INSTAGRAM FEEDS
@@ -722,7 +725,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="info_bottom">
         <div class="row">
           <div class="col-md-2">
@@ -734,14 +737,8 @@
           </div>
           <div class="col-md-4 ml-auto">
             <div class="social_box">
-              <a href="">
+              <a href="https://www.facebook.com/ChelakkaraSGYA/">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
