--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             Email : sgya.chelakkara@gmail.com
           </span>
         </a>
-        <a href="">
+        <a href="https://goo.gl/maps/8v7WfZ9jH55arCWR7">
           <i class="fa fa-map-marker" aria-hidden="true"></i>
           <span>
             Chelakkara,Thrissur,Kerala
@@ -684,48 +684,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-sm-6 col-md-4 col-lg-3 mx-auto">
-            <div class="info_post">
-              <h5>
-                INSTAGRAM FEEDS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info_form">
-              <h4>
-                SIGN UP TO OUR NEWSLETTER
-              </h4>
-              <form action="">
-                <input type="text" placeholder="Enter Your Email" />
-                <button type="submit">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div> -->
+
       <div class="info_bottom">
         <div class="row">
           <div class="col-md-2">
@@ -735,6 +694,8 @@
               </a>
             </div>
           </div>
+
+          
           <div class="col-md-4 ml-auto">
             <div class="social_box">
               <a href="https://www.facebook.com/ChelakkaraSGYA/">
