--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <a class="nav-link" href="activities.html">Activities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
+                  <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
@@ -106,23 +106,24 @@
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="#"> Login</a>
                 </li> -->
-                <form class="form-inline">
+                <!-- <form class="form-inline">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
                   </button>
-                </form>
+                </form> -->
               </ul>
-              <div class="quote_btn-container">
+              <!-- <div class="quote_btn-container">
                 <a href="" class="quote_btn">
                   Get A Quote
                 </a>
-              </div>
+              </div> -->
             </div>
           </nav>
         </div>
       </div>
     </header>
     <!-- end header section -->
+
     <!-- slider section -->
     <section class="slider_section ">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
@@ -138,10 +139,10 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
                       </a>
-                      <a href="" class="btn2">
+                      <a href="about.html" class="btn2">
                         About Us
                       </a>
                     </div>
