--- a/index.html
+++ b/index.html
@@ -103,20 +103,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="#"> Login</a>
-                </li> -->
-                <!-- <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form> -->
               </ul>
-              <!-- <div class="quote_btn-container">
-                <a href="" class="quote_btn">
-                  Get A Quote
-                </a>
-              </div> -->
             </div>
           </nav>
         </div>
@@ -139,9 +126,6 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="contact.html" class="btn1">
-                        Contact Us
-                      </a>
                       <a href="about.html" class="btn2">
                         About Us
                       </a>
@@ -162,11 +146,8 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="contact.html" class="btn1">
                         Contact Us
-                      </a>
-                      <a href="" class="btn2">
-                        About Us
                       </a>
                     </div>
                   </div>
@@ -185,11 +166,8 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
-                      </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="gallery.html" class="btn1">
+                        Gallery
                       </a>
                     </div>
                   </div>
@@ -208,11 +186,8 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
-                      </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="activities.html" class="btn1">
+                        Activities
                       </a>
                     </div>
                   </div>
@@ -231,11 +206,8 @@
                       CHELAKKARA
                     </h1>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
-                      </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="service.html" class="btn1">
+                        Services
                       </a>
                     </div>
                   </div>
