--- a/activities.html
+++ b/activities.html
@@ -130,7 +130,7 @@
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
             <a href="#" class="item" data-owl-filter=".charity">Charity</a>
-            <a href="#" class="item" data-owl-filter=".gathering">Gathering </a>
+            <a href="#" class="item" data-owl-filter=".sports">Sports </a>
             <a href="#" class="item" data-owl-filter=".social">Social </a>
           </nav>
         </div>
@@ -139,10 +139,8 @@
           <div class="item charity">
             <div class="box">
               <div class="img-box">
-                <img src="images/project1.jpg" alt="" />
-                <!-- <a >
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a> -->
+                <img src="images/book_1.jpg" alt="" />
+                <img src="images/book_2.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
@@ -154,17 +152,15 @@
               </div>
             </div>
           </div>
-          <div class="item gathering">
+          <div class="item sports">
             <div class="box">
               <div class="img-box">
-                <img src="images/project1.jpg" alt="" />
-                <a href="" class="pin_link">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
+                <img src="images/sports_2.jpg" alt="" />
+                <img src="images/sports_1.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
-                  മിനി പെരുന്നാൾ
+                  സ്പോർട്സ്
                 </h5>
                 <p>
                   under process
@@ -175,10 +171,10 @@
           <div class="item social">
             <div class="box">
               <div class="img-box">
-                <img src="images/project1.jpg" alt="" />
-                <a href="" class="pin_link">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
+                <img src="images/env_1.jpg" alt="" />
+                <img src="images/env_2.jpg" alt="" />
+                <img src="images/env_3.jpg" alt="" />
+                <img src="images/env_4.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
