--- a/activities.html
+++ b/activities.html
@@ -146,7 +146,7 @@
                   പുസ്തക വിതരണം
                 </h5>
                 <p>
-                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും ദരിദ്രരായ വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധമാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. ഞങ്ങളുടെ വാർഷിക സംഭാവന പരിപാടിയിലൂടെ, അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+                  സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ കഴിഞ്ഞ കുറെ വർഷങ്ങളായി നിർധനരായ വിദ്യാർഥികൾക്ക് പഠനോപകരണങ്ങൾ വിതരണം ചെയ്യുന്നു
                 </p>
               </div>
             </div>
@@ -161,7 +161,7 @@
                   സ്പോർട്സ്
                 </h5>
                 <p>
-                  under process
+                  ചേലക്കര മേഖല തലത്തിൽ കഴിഞ്ഞ വർഷം സംഘടിപ്പിച്ച ക്രിക്കറ്റ്, ഫുട്ബോൾ ടൂർണമെൻ്റിൽ  വിജയികളവൻ സാധിച്ച. 
                 </p>
               </div>
             </div>
@@ -176,7 +176,7 @@
                   പരിസ്ഥിതി ദിനം
                 </h5>
                 <p>
-                  under process
+                  പരിസ്ഥിതി ദിനത്തോടനുബന്ധിച്ച് പള്ളി അങ്കണത്തിൽ വൃക്ഷ തൈകൾ നട്ടു.
                 </p>
               </div>
             </div>
