--- a/index.html
+++ b/index.html
@@ -348,20 +348,18 @@
               </h2>
             </div>
             <p>
-              The St. George Youth Association holds a significant position as a key spiritual organization within the St. George
-              Jacobite Syrian Church,affiliated with the JSCYA. The President of the unit is the Parish Vicar,and an annual committee, 
-              led by the Secretary, is responsible for the day-to-day activities of the Unit. Our primary objective is to foster a deep
-              in church activities. As members of the youth association, they play a vital role in every program conducted within the church.
-              Serving as a backbone, the youth association effectively represents the interests and concerns of the youth in all church matters.
+              ചേലക്കര സെൻ്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിയുടെ കീഴിൽ പ്രവർത്തിക്കുന്ന 
+              യുവജന പ്രസ്ഥാനമാണ് സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ.ഈ പ്രസ്ഥാനത്തിൽ നാളിതുവരെ
+              നൂറിൽപരം യുവതി യുവാക്കൾ ഇടവകയോട് ചേർന്ന് നിന്ന് പ്രവർത്തിച്ചു വരുന്നു .
             </p>
-            <a href="">
+            <a href="about.html">
               Read More
             </a>
           </div>
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/sgya_back.jpg" alt="">
           </div>
         </div>
 
