--- a/about.html
+++ b/about.html
@@ -125,19 +125,19 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              ചേലക്കര സെൻ്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിയുടെ കീഴിൽ പ്രവർത്തിക്കുന്ന 
+              യുവജന പ്രസ്ഥാനമാണ് സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ.ഈ പ്രസ്ഥാനത്തിൽ നാളിതുവരെ
+              നൂറിൽപരം യുവതി യുവാക്കൾ ഇടവകയോട് ചേർന്ന് നിന്ന് പ്രവർത്തിച്ചു വരുന്നു .
+              പരിശുദ്ധ സഭയുടെ പാരമ്പര്യത്തിലും വിശ്വാസത്തിലും, സമൂഹത്തോടുള്ള പ്രിബദ്ധതയിലും മുന്നോട്ട് 
+              പോകുന്ന ഈ സംഘടന നിരവധി ചാരിറ്റി പ്രവർത്തനങ്ങൾക്ക് നേതൃത്വം നൽകിവരുന്നു.
+              ഇടവകയുടെ ആത്മീയവും ഭൗതികവുമായ കാര്യങ്ങളിൽ  സെൻ്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ
+              നിരന്തരം പ്രവർത്തിച്ചുകൊണ്ടിരിക്കുന്നു
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/sgya_back.jpg" alt="">
           </div>
         </div>
 
